# team-it-works-on-my-machine

./: .env.example  .gitignore  README.md  compose.aws.yml  compose.yml  docker-compose.yml
ansible/: playbook.yml
bruno/: ping production.bru  ping.bru
client/: .env  .env.example  .env.production  .prettierignore  Dockerfile  README.md  babel.config.cjs  eslint.config.js  index.html  jest.config.cjs  package.json  pnpm-lock.yaml  setupTests.ts  stats.html  tsconfig.app.json  vite.config.ts
docs/: problem_statement_proposal.md  weekly_report_01.md
genai/: .env.example  Dockerfile  README.md  openapi.json  pyproject.toml  pytest.ini  requirements.txt
genai/app/: main.py
genai/app/input_query/: analyze_yaml.py  ask.py
genai/genai/app/: main.py  open_api.py
genai/genai/app/input_query/: analyze_yaml.py  ask.py
genai/genai/rag/utils/: retrieve_data.py  upload_data.py
genai/rag/data/processed/: actions_docs_chunked.json  actions_docs_raw.json  structured_chunks.json
genai/rag/ingest/: chunker.py  crawler.py  embedder.py  text_code_splitter.py
genai/rag/utils/: retrieve_data.py  upload_data.py
genai/test/: test_end_points.py  test_retrieve_data.py  test_upload_vector_db.py
gh-connector/: Dockerfile  README.md  build.gradle.kts  openapi.json  settings.gradle.kts
prometheus/: Dockerfile  alerts.yml  entrypoint.sh  prometheus.aws.yml  prometheus.docker.yml  prometheus.k8s.yml  prometheus.local.yml  prometheus.yml  prometheus.yml.template
terraform/: main.tf  outputs.tf  setup.md  variables.tf
users/: Dockerfile  README.md  build.gradle.kts  (+1 more)
(+178 files in other folders)
